--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -21,7 +21,7 @@
   font-size: 10px;
   font-weight: bold;
   color: #555555;
-  background-color: #fff;
+  background-color: #f8f8f8;
   padding: 10px;
   border-radius: 6px;}
 .BlockNews p {color: #444 !important;}
