--- a/src/components/Toggle/style.css
+++ b/src/components/Toggle/style.css
@@ -3,7 +3,7 @@
     width: 100px;
     border-radius: 8px;
     margin: auto;
-    background-image: linear-gradient(#f2f4f8, skyblue);
+    background-image: linear-gradient(#eaecf2, #eaecf2);
     position: relative;
     cursor: pointer;
     top: 3px;
