--- a/src/all.module.css
+++ b/src/all.module.css
@@ -3452,7 +3452,7 @@ input{
     font-weight: 700;
 }
 .BtnSecondary:hover{
-    background-color: #f93d6d; 
+    background-color: #f93d6d;
 }
 .BtnPrimary:hover{
     background-color: #5433d4;
@@ -3628,7 +3628,7 @@ input{
     background-color: #141416;
     color:#fff;
     float:right;
-    
+
 }
 .WizardStepsList{
     position: fixed;
@@ -3682,3 +3682,48 @@ input{
     position: relative;
     top: 2px;
 }
+
+.OrganizationToggle {
+    position: absolute;
+    top: 10px;
+    right: 50px;
+    margin: 10px auto;
+    padding-top: 2%;
+    padding-right: 2%;
+    box-sizing: border-box;
+    font-size: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-end;
+    align-items: stretch;
+    input {
+        width: 0; height: 0; position: absolute; left: -9999px;
+    }
+    input + label {
+      margin: 0; padding: .50rem 1.75rem;
+      box-sizing: border-box;
+      position: relative;
+      display: inline-block;
+      border: solid 1px #DDD;
+      background-color: #FFF;
+      font-size: 1rem;
+      line-height: 140%;
+      font-weight: 600;
+      text-align: center;
+      box-shadow: 0 0 0 rgba(255,255,255,0);
+      transition:   border-color .15s ease-out,
+            color .25s ease-out,
+            background-color .15s ease-out,
+            box-shadow .15s ease-out;
+
+      &:first-of-type {border-radius: 6px 0 0 6px; border-right: none;}
+      &:last-of-type {border-radius: 0 6px 6px 0; border-left: none;}
+    }
+    input:hover + label {border-color: black}
+    input:checked + label {
+      background-color: black;
+      color: #FFF;
+      border-color: black;
+      z-index: 1;
+    }
+  }
